tests/macros/missing/plugin.rs
fn main() {
    requestty::questions![Plugin { name: "plugin" }];
}
